--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
+        "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.11",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -20,6 +21,10 @@
         "react-hook-form": "^7.43.3",
         "react-router-dom": "^6.8.2",
         "react-scripts": "5.0.1",
+        "redux": "^4.1.2",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.2",
         "sass": "^1.58.3",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
