--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react-dom": "^18.0.11",
         "axios": "^1.3.4",
         "classnames": "^2.3.2",
+        "kill-port": "^2.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.3",
