--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.3",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.2",
         "react-scripts": "5.0.1",
         "redux": "^4.1.2",
@@ -55,6 +56,7 @@
         ]
     },
     "devDependencies": {
+        "@types/redux-logger": "^3.0.9",
         "babel-plugin-module-resolver": "^5.0.0",
         "customize-cra": "^1.0.0",
         "react-app-rewired": "^2.2.1"
