--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.3",
-        "react-redux": "^8.0.5",
+        "react-redux": "7.2.6",
         "react-router-dom": "^6.8.2",
         "react-scripts": "5.0.1",
         "redux": "^4.1.2",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.4.2",
+        "redux-thunk": "^2.4.1",
         "sass": "^1.58.3",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
