--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.3",
-        "react-redux": "7.2.6",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.2",
         "react-scripts": "5.0.1",
         "redux": "^4.1.2",
